# mnemonic

./: Cargo.toml  LICENSE  README.md  _mn  _mn.ps1  build.rs  makefile  mn.bash  mn.elv  mn.fish  notes
completions/: _mn  _mn.ps1  mn.bash  mn.elv  mn.fish
docs/: mn.1
src/: add.rs  cli.rs  edit.rs  err.rs  input_state.rs  list.rs  main.rs  rm.rs  show.rs  utils.rs
src/state/: default_toml_config.rs  mod.rs  test_state.rs
