[package]
description = "The CLI app for remembering those little things that slip your mind"
repository = "https://github.com/codesections/mnemonic"
homepage = "https://github.com/codesections/mnemonic"
license = "MIT"
keywords = ["CLI", "notes", "productivity", "minimalist", "syntax-highlighting"]
readme = "./README.md"
categories = ["command-line-utilities"]
name = "mn"
version = "0.2.1"
authors = ["Daniel Sockwell <daniel@codesections.com>"]
edition = "2018"

[dependencies]
prettyprint = "0.4.1"
clap = "2.32.0"
directories = "1.0.2"
colored = "1.7.0"
open = "1.2.2"
man = "0.3.0"
assert_fs = "0.11.3"
toml = "0.4.10"
serde_derive = "1.0.85"
serde = "1.0.85"
derive_builder = "0.7.0"
toml_edit = "0.1.3"

